syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "ApiComparisons.Shared.GRPC.Models";

package transactions.person;

// The Transactions Person model
message Person {    
    string id = 1;
    string name = 2;
    google.protobuf.Timestamp created = 3;    
}

// The request containing an optional person ID and name
message PersonRequest {
    string id = 1;
    string name = 2;
}

// The response containing people
message PersonResponse {
    repeated Person people = 1;
}